--- a/Grafo/.vscode/settings.json
+++ b/Grafo/.vscode/settings.json
@@ -45,6 +45,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "cstring": "cpp",
+        "cinttypes": "cpp"
     }
 }
