--- a/Grafo/.vscode/settings.json
+++ b/Grafo/.vscode/settings.json
@@ -47,6 +47,7 @@
         "typeinfo": "cpp",
         "set": "cpp",
         "cstring": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "unordered_set": "cpp"
     }
 }
